--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
+    "start": "node src/seeders/seed.js && node src/server.js",
     "dev": "nodemon src/server.js",
     "seed": "node src/seeders/seed.js"
   },
